--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,1 +1,53 @@
-<p>contact-me works!</p>
+<form class="example-form" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+    <mat-form-field class="example-full-width">
+        <input matInput placeholder="Company" value="Google">
+    </mat-form-field>
+
+    <table class="example-full-width" cellspacing="0">
+        <tr>
+            <td>
+                <mat-form-field class="example-full-width">
+                    <input matInput placeholder="First name">
+                </mat-form-field>
+            </td>
+            <td>
+                <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Last Name">
+                </mat-form-field>
+            </td>
+        </tr>
+    </table>
+    <mat-form-field class="example-full-width">
+        <input matInput placeholder="Email" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+        <mat-hint>Company Email is recommended.</mat-hint>
+        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+            Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+        </mat-error>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <span matPrefix>+49 &nbsp;</span>
+        <input type="tel" matInput placeholder="Telephone">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Font size</mat-label>
+        <mat-select #fontSize value="16px" (selectionChange)="triggerResize()">
+            <mat-option value="10px">10px</mat-option>
+            <mat-option value="12px">12px</mat-option>
+            <mat-option value="14px">14px</mat-option>
+            <mat-option value="16px">16px</mat-option>
+            <mat-option value="18px">18px</mat-option>
+            <mat-option value="20px">20px</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field [style.fontSize]="fontSize.value">
+        <mat-label>What do you want to tell me?(Autosize textarea)</mat-label>
+        <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
+    </mat-form-field>
+    <br/>
+    <button mat-raised-button type="submit" color="primary">Submit</button>
+    <p *ngIf="isCollapsed">Thanks for sending information. </p>
+</form>
