--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -4,5 +4,10 @@
 }
 
 .info-text {
-    text-align: center;
+    text-align: left;
+}
+
+.description {
+    text-align: left;
+    display: inherit;
 }
