--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -17,16 +17,12 @@
             </td>
         </tr>
     </table>
-    <mat-form-field class="example-full-width">
-        <input matInput placeholder="Email" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
-        <mat-hint>Company Email is recommended.</mat-hint>
-        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-            Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="emailFormControl.hasError('required')">
-            Email is <strong>required</strong>
-        </mat-error>
-    </mat-form-field>
+    <div class="example-container">
+        <mat-form-field>
+            <input matInput placeholder="Enter your email" [formControl]="email" required>
+            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+    </div>
     <mat-form-field class="example-full-width">
         <span matPrefix>+49 &nbsp;</span>
         <input type="tel" matInput placeholder="Telephone">
