--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,2 +1,3 @@
+<h1>Try typing any candidate information to insert to the list below. </h1>
 <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
 <app-post-list></app-post-list>
