update latest exp

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -10,13 +10,13 @@
                 alt="Photo of Shouping">
             <mat-card-content>
                 <p>
-                    5 years of expertise in IT; able to let the numbers tell the story. Hungry for new things; insatiable learner; a preacher of innovation. Best friend of diverse cultures, able to communicate, organized and easy-going under stress. Specialties: Front-end
-                    Development, Data Analysis
+                    Cross culture team player; able to let the numbers tell the story. Hungry for new things; insatiable learner; a preacher of innovation. Best friend of diverse cultures, able to communicate, organized and easy-going under stress. Specialties: Front-end
+                    Development, Data Analysis, Cloud DevOps<br><br> Google Official Certified Cloud Engineer
                 </p>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
+                <button mat-raised-button>LIKE</button>
+                <button mat-raised-button>SHARE</button>
             </mat-card-actions>
         </mat-card>
     </mat-grid-tile>
